<resources>
    <string name="item_name">Name</string>
    <string name="item_name_err">Name is required</string>
    <string name="item_notes">Notes</string>
    <string name="item_video_tutorial">Video Tutorial</string>

    <string name="equipment">Equipment</string>
    <string name="target_muscle">Target muscle</string>
    <string name="exercise">Exercise</string>
    <string name="workout">Workout</string>
    <string name="set">Set</string>
    <string name="rest_period">Rest period</string>
    <string name="rest_day">Rest Day</string>
    <string name="rest_period_input_label">Rest</string>

    <string name="save">Save</string>
    <string name="details">Info</string>
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>
    <string name="bnt_add">Add</string>
    <string name="btn_cancel">Cancel</string>

    <!-- bottom navigation -->
    <string name="templates">Templates</string>
    <string name="dashboard">Dashboard</string>
    <string name="stats">Stats</string>
    <string name="live_session_map">Session Overview</string>
    <string name="live_session_current_item">To Current</string>
    <string name="live_session_end">End Session</string>

    <!-- app bar -->
    <string name="settings">Settings</string>

    <!-- live session -->
    <string name="next">Next &gt;&gt;</string>
    <string name="previous">&lt;&lt; Prev</string>
    <string name="no_history_for_workout">No history for this workout</string>
    <string name="workout_session_duration"><b><u>Duration</u></b></string>
    <string name="workout_session_results"><b><u>Results</u></b></string>

    <!-- guides -->
    <string name="templatesGuideLabel">Creating a Program</string>
    <string name="liveSessionGuideLabel">Tracking your Workouts</string>
    <string name="statsGuideLabel">Monitoring your progress</string>

    <!-- notifications -->
    <string name="notificationsChannelId">GymBudNotifications1</string>
    <string name="notificationsChannelName">GymBudNotifications</string>
    <string name="notificationsChannelDescription">Notifications sent by GymBud: daily workout reminder.</string>
    <string name="dailyWorkoutReminderNotificationTile">Daily Workout Reminder</string>
    <string name="dailyWorkoutReminderHint">Send reminder at...</string>

    <!-- workout session -->
    <string name="workoutSessionCompletedDashboardMsg">
        Workout Session Completed!\n\n
        ᕙ(  •̀ ᗜ •́  )ᕗ
    </string>
</resources>